; ModuleID = '/home/carl/AnghaBench/git/extr_json-writer.c_jw_init.c'
source_filename = "/home/carl/AnghaBench/git/extr_json-writer.c_jw_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.json_writer = type { i64, i64, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @jw_init(%struct.json_writer* %0) #0 {
  %2 = alloca %struct.json_writer*, align 8
  store %struct.json_writer* %0, %struct.json_writer** %2, align 8
  %3 = load %struct.json_writer*, %struct.json_writer** %2, align 8
  %4 = getelementptr inbounds %struct.json_writer, %struct.json_writer* %3, i32 0, i32 3
  %5 = call i32 @strbuf_init(i32* %4, i32 0)
  %6 = load %struct.json_writer*, %struct.json_writer** %2, align 8
  %7 = getelementptr inbounds %struct.json_writer, %struct.json_writer* %6, i32 0, i32 2
  %8 = call i32 @strbuf_init(i32* %7, i32 0)
  %9 = load %struct.json_writer*, %struct.json_writer** %2, align 8
  %10 = getelementptr inbounds %struct.json_writer, %struct.json_writer* %9, i32 0, i32 1
  store i64 0, i64* %10, align 8
  %11 = load %struct.json_writer*, %struct.json_writer** %2, align 8
  %12 = getelementptr inbounds %struct.json_writer, %struct.json_writer* %11, i32 0, i32 0
  store i64 0, i64* %12, align 8
  ret void
}

declare dso_local i32 @strbuf_init(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
